--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,6 +8,8 @@ background #111111
 
 background_opacity .75
 
+allow_remote_control yes
+
 # # https://draculatheme.com/kitty
 # #
 # # Installation instructions:
